# webserver

./: .gitignore  Cargo.toml  main.http
migrations/: 20250302092412_users.up.sql  20250304101439_tickets.down.sql  20250304101439_tickets.up.sql
src/: error.rs  lib.rs  main.rs
src/error/: auth.rs  database.rs  mod.rs  room.rs  ticket.rs
src/middleware/: auth.rs  cookie.rs  jwt.rs  mod.rs
src/middleware/auth/: cookie.rs  jwt.rs  mod.rs
src/model/: ticket.rs
src/web/: chat.rs  login.rs  mod.rs  register.rs  ticket.rs
src/web/chat/: manage.rs  mod.rs
src/web/room/: chat.rs  manage.rs  message.rs  mod.rs
tests/: client.rs
