[package]
name = "http"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = "0.6.2"

sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
] }

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

dotenv = "0.15.0"
# uuid = { version = "1.15.1", features = ["v4"] }

httpc-test = "0.1.10"
