[package]
name = "http"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower-http = "0.6.2"
tower-cookies = "0.11.0"
jsonwebtoken = "9.3.1"
futures-util = "0.3.31"
tokio = { version = "1.44.0", features = ["full"] }

sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
] }

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

dotenv = "0.15.0"
chrono = "0.4.40"
thiserror = "2.0.12"

reqwest = { version = "0.12.12", features = ["json"] }
